--- a/static/styles.css
+++ b/static/styles.css
@@ -177,3 +177,23 @@
     padding: 20%;
     width:80%;
 }
+
+.section {
+    padding: 5%
+}
+.section p {
+    font-family: Orienta;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20;
+    line-height: 30px;
+    
+}
+.fitnessGram {
+    padding-left: 5%;
+    
+}
+.fitnessGram p {
+    padding-left: 2%;
+    border-left: 5px solid #000000;
+}
