--- a/static/styles.css
+++ b/static/styles.css
@@ -197,3 +197,16 @@
     padding-left: 2%;
     border-left: 5px solid #000000;
 }
+
+.slider {
+    position:absolute;
+    transition-duration:5s;
+    transition-timing-function:linear;
+    transition-delay: 0s;
+
+}
+
+.slider:hover {
+    left: 200px;
+}
+
